--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   db:
@@ -13,6 +13,6 @@ services:
     volumes:
       - .:/code
     ports:
-      - "{{inputs.port}}:8000"
+      - '8000:8000'
     depends_on:
       - db
